tempfile/derive_more/tests/compile_fail/debug/union.rs
#[derive(derive_more::Debug)]
pub union Foo {
    bar: i32,
}

fn main() {}
